--- a/frontend/ecommerce/src/assets/scss/prepros-6.config
+++ b/frontend/ecommerce/src/assets/scss/prepros-6.config
@@ -83,33 +83,11 @@
         "icons/themify-icons/themify-icons.css",
         "icons/flag-icon-css/flag-icon.min.css",
         "icons/material-design-iconic-font/css/materialdesignicons.min.css",
-        "widgets/widgets.scss",
         "grid.scss",
         "responsive.scss",
         "../css/spinners.css",
-        "../css/animate.css",
-        "pages/common.scss",
-        "pages/pagination.scss",
-        "pages/button-page.scss",
-        "pages/form-pages.scss",
-        "pages/table-pages.scss",
-        "pages/perfect-scrollbar.scss",
-        "widgets/topbar-mail.scss",
-        "widgets/Weather-widget.scss",
-        "widgets/comment.scss",
-        "widgets/to-do.scss",
-        "widgets/chat-widget.scss",
-        "widgets/calendar.scss",
-        "widgets/steamline.scss",
-        "widgets/feed.scss",
-        "widgets/carousel.scss",
-        "widgets/social.scss",
-        "widgets/profile.scss",
-        "widgets/common-widget.scss",
-        "widgets/contact.scss",
-        "widgets/blog.scss",
-        "widgets/msg-box.scss",
-        "widgets/activity.scss"
+        "../css/animate.css"
+        
       ]
     },
     {
